--- a/assets/css/invoice.css
+++ b/assets/css/invoice.css
@@ -1,25 +1,36 @@
 .invoice-preview {
-  max-width: 900px;
-  min-width: 400px;
-  margin: auto; }
-  .invoice-preview table {
+    max-width: 900px;
+    min-width: 400px;
+    height: inherit;
+    margin: auto;
+}
+
+.invoice-preview table {
     width: 100%;
-    margin-top: 40px; }
-  .invoice-preview td, .invoice-preview th {
-    padding: 10px; }
-  .invoice-preview * {
-    line-height: 20px !important; }
+    margin-top: 40px;
+}
+
+.invoice-preview td,
+.invoice-preview th {
+    padding: 10px;
+}
+
+.invoice-preview * {
+    line-height: 20px !important;
+}
 
 .ribbon {
-  position: absolute;
-  left: -25px;
-  top: -34px;
-  z-index: 1;
-  overflow: hidden;
-  width: 110px;
-  height: 110px;
-  text-align: right; }
-  .ribbon span {
+    position: absolute;
+    left: -25px;
+    top: -34px;
+    z-index: 1;
+    overflow: hidden;
+    width: 110px;
+    height: 110px;
+    text-align: right;
+}
+
+.ribbon span {
     font-size: 12px;
     font-weight: bold;
     color: #FFF;
@@ -32,48 +43,75 @@
     position: absolute;
     top: 35px;
     left: -28px;
-    padding: 0 !important; }
-    .ribbon span:before {
-      content: "";
-      position: absolute;
-      left: 0px;
-      top: 100%;
-      z-index: -1;
-      border-left: 3px solid #aaa;
-      border-right: 3px solid transparent;
-      border-bottom: 3px solid transparent;
-      border-top: 3px solid #aaa; }
-    .ribbon span:after {
-      content: "";
-      position: absolute;
-      right: 0px;
-      top: 100%;
-      z-index: -1;
-      border-left: 3px solid transparent;
-      border-right: 3px solid #aaa;
-      border-bottom: 3px solid transparent;
-      border-top: 3px solid #aaa; }
+    padding: 0 !important;
+}
+
+.ribbon span:before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    top: 100%;
+    z-index: -1;
+    border-left: 3px solid #aaa;
+    border-right: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid #aaa;
+}
+
+.ribbon span:after {
+    content: "";
+    position: absolute;
+    right: 0px;
+    top: 100%;
+    z-index: -1;
+    border-left: 3px solid transparent;
+    border-right: 3px solid #aaa;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid #aaa;
+}
 
 .invoice-meta {
-  font-size: 100% !important; }
+    font-size: 100% !important;
+}
 
 .print-invoice .invoice-preview-container {
-  border: 1px solid #dadada; }
+    border: 1px solid #dadada;
+}
+
 .print-invoice .ribbon {
-  width: 105px;
-  height: 105px;
-  left: -21px;
-  top: -31px; }
-  .print-invoice .ribbon span:before, .print-invoice .ribbon span:after {
-    border: none !important; }
-.print-invoice .table-responsive, .print-invoice .table-responsive tr th, .print-invoice .table-responsive tr td:not([colspan='3']) {
-  border: 1px solid #eee !important; }
+    width: 105px;
+    height: 105px;
+    left: -21px;
+    top: -31px;
+}
+
+.print-invoice .ribbon span:before,
+.print-invoice .ribbon span:after {
+    border: none !important;
+}
+
+.print-invoice .table-responsive,
+.print-invoice .table-responsive tr th,
+.print-invoice .table-responsive tr td:not([colspan='3']) {
+    border: 1px solid #eee !important;
+}
+
 .print-invoice .invoice-pdf-hidden-table {
-  border: none !important; }
+    border: none !important;
+}
+
+.nonediplay {
+    visibility: hidden;
+}
+
 .print-invoice td.invoice-header-style-one .invoice-info-title {
-  margin-right: -5px !important; }
+    margin-right: -5px !important;
+}
+
 .print-invoice td.invoice-header-style-two .invoice-info-title {
-  margin-left: -5px !important; }
+    margin-left: -5px !important;
+}
 
 .public-invoice-preview form {
-  margin-bottom: 0 !important; }
+    margin-bottom: 0 !important;
+}
